Practicas/Respuestas/306_2_Init_Container.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: init
  name: init
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
      - name: data
        mountPath: /usr/share/nginx/html
  volumes:
      - name: data
